# hi-five

./: .gitignore  README.md
AI/: README.md
AI/Comprehensive Emotion AI/: .gitignore  0.5.3  250120.ipynb  250122.ipynb  250122.py  250122_newver.ipynb  250122_newver.py  App.css  App.js  VideoAI_1.0.py  VideoAI_1.1.py  app.jsx  app.py  final.jsx  index.html  main.py  test.py  train_and_save_model.py  video_ai.py
AI/ReactEmotionLogger/: .gitignore  README.md  package-lock.json  package.json  server.js
AI/chatbot-final/: .gitignore  README.md  package-lock.json  package.json  server.js  test.py
AI/exam-assessment/: README.md  package-lock.json  package.json
AI/exam-assessment/src/: App.js  (+1 more)
AI/game-audio-prototype/: .gitignore  README.md  index.js  package-lock.json  package.json
AI/react-voice-agent/: .gitignore
AI/react-voice-agent/server/: pyproject.toml
AI/react-voice-agent/server/src/langchain_openai_voice/: __init__.py
AI/react-voice-agent/server/src/server/: app.py  prompt.py
CI-CD/: Jenkinsfile  README.md
backend/: .gitignore  Dockerfile  README.md  build.gradle
deploy/: docker-compose.prod.yml
docker/: docker-compose.yml
exec/: _C205__포팅메뉴얼.md  h5_final_db.sql
first-week/: README.md
first-week/김서린/: README.md
first-week/김의현/: README.md
first-week/박성원/: README.md
first-week/정수연/: README.md
first-week/정찬환/: README.md
first-week/한승우/: README.md
frontend/h5/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  server.js  vite.config.js
project/: README.md  docker-compose.yml
(+767 files in other folders)
